Updated from Octarine

--- a/Documents/Octarine/Home/Daily/2025-11-12.md
+++ b/Documents/Octarine/Home/Daily/2025-11-12.md
@@ -6,3 +6,13 @@
 - [ ] Finish AI projects
 
 - [ ] Email CF about 
+
+**Weekly tasks**
+
+- Slack Todo
+- Front
+- Github
+  - Issues (all repos)
+  - PR reviews
+- Cloud planning
+- Linear review
