Updated from Octarine

--- a/Documents/Octarine/Home/Daily/2025-11-12.md
+++ b/Documents/Octarine/Home/Daily/2025-11-12.md
@@ -5,8 +5,6 @@
 
 - [ ] Finish AI projects
 
-- [ ] Email CF about
+- [ ] Email CF about bots: [[Web Bot Auth / HTTP Message Signatures]] 
 
 ## [[Weekly tasks]]
-
-## Cloud Call
