Updated from Octarine

--- a/Documents/Octarine/Home/Daily/2025-11-12.md
+++ b/Documents/Octarine/Home/Daily/2025-11-12.md
@@ -9,4 +9,8 @@
 
 - [ ] Catch up with BSO
 
+- [ ] Improve Logging/debugging
+
+  - [ ] log response status etc to betterstack/logs
+
 ## [[Weekly tasks]]
